--- a/css/styles.css
+++ b/css/styles.css
@@ -1,17 +1,56 @@
-@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css");
+
+
+@font-face {
+  font-family: "Harmony OS Medium";
+  src: url(../font/HarmonyOS_Sans_SC_Medium.ttf);
+}
+
+@font-face {
+  font-family: "Harmony OS Regular";
+  src: url(../font/HarmonyOS_Sans_SC_Light.ttf);
+}
+
+@font-face {
+  font-family: "Harmony OS Bold";
+  src: url(../font/HarmonyOS_Sans_SC_Bold.ttf);
+}
 
 * {
-    font-family: "Outfit","Passion One";
+    font-family: "Harmony OS Medium", "Outfit", "PT Sans" -apple-system, system-ui,BlinkMacSystemFont,"Segoe UI",Roboto;
     color: #5c5c5c;
-    font-weight: 300;
 }
 
 body {
   background-color: #D9D9D9;
 }
 
+.primary-med {
+    font-family: "Harmony OS Medium";
+}
+
+.primary-reg {
+    font-family: "Harmony OS Regular";
+}
+
+.primary-bold {
+    font-family: "Harmony OS Bold";
+}
+
+.secondary-med {
+    font-family: "Outfit";
+}
+
+.secondary-reg {
+    font-family: "PT Sans";
+}
+
 .card-text {
+    font-family: "Harmony OS Regular";
     font-weight: 300;
+}
+
+hr.style1{
+	border-top: 1px solid #8c8b8b;
 }
 
 .text-azure {
@@ -26,12 +65,21 @@ body {
   color: #00000071;
 }
 
+.btn-custom {
+  background-color: #FFF;
+}
+
+.btn-custom:hover {
+  background-color: #48999F;
+  color:#fff
+}
+
 html {
     scroll-padding-top: calc(4.5rem - 1px);
 }
 
 body {
-  letter-spacing: 0.0625em;
+  letter-spacing: 0.02em;
 }
 
 #mainNav {
@@ -47,10 +95,16 @@ body {
 #mainNav .navbar-toggler:focus {
   outline: none;
 }
-#mainNav .navbar-brand {
+#mainNav.nav-transparent .navbar-brand {
   font-weight: 700;
   padding: 0.9rem 0;
 }
+
+#mainNav.nav-default .navbar-brand {
+  font-weight: 700;
+  padding: 0.9rem 0;
+}
+
 #mainNav .navbar-nav .nav-item:hover {
   color: fade(#fff, 80%);
   outline: none;
@@ -62,35 +116,46 @@ body {
 }
 
 @media (min-width: 992px) {
-  #mainNav {
+  #mainNav.nav-transparent {
     padding-top: 0;
     padding-bottom: 0;
     border-bottom: none;
     background-color: transparent;
     transition: background-color 0.3s ease-in-out;
   }
-
-  #mainNav.nav-white {
-    color:#000000
+  
+  #mainNav.nav-default {
+    color:#444;
+    padding-top: 0;
+    padding-bottom: 0;
+    border-bottom: none;
+    transition: background-color 0.3s ease-in-out;
   }
 
-  #mainNav .navbar-brand {
+  #mainNav.nav-default .navbar-brand {
     padding: 0rem 0.5rem;
     font-size: 150%;
-    color: rgba(255, 255, 255, 0.5);
+    color: rgb(248, 117, 150);
   }
-  #mainNav .nav-link {
+
+  #mainNav.nav-transparent .navbar-brand {
+    padding: 0rem 0.5rem;
+    font-size: 150%;
+    color: rgba(255, 255, 255, 0.75);
+  }
+
+  #mainNav.nav-transparent .nav-link {
     transition: none;
     padding: 2rem 1.5rem;
     color: rgba(255, 255, 255, 0.5);
   }
 
-  #mainNav .material-icons {
+  #mainNav.nav-transparent .material-icons {
     color: rgba(255, 255, 255, 0.5);
     padding: 0.5rem
   }
 
-  #mainNav .nav-link:hover {
+  #mainNav.nav-transparent .nav-link:hover {
     color: rgba(255, 255, 255, 0.75);
   }
 
@@ -98,29 +163,31 @@ body {
     background-color: #fff;
   }
 
-  #mainNav.navbar-shrink .navbar-brand {
+  #mainNav.navbar-shrink .navbar-brand, #mainNav.nav-default .navbar-brand {
     font-size: 130%;
     color: rgb(248, 117, 150);
   }
-  #mainNav.navbar-shrink .nav-link {
+  #mainNav.navbar-shrink .nav-link, #mainNav.nav-default .nav-link {
     color: #444;
     padding: 1.5rem 1.5rem 1.25rem;
     border-bottom: 0.25rem solid transparent;
   }
 
-  #mainNav.navbar-shrink .material-icons {
+  #mainNav.navbar-shrink .material-icons, #mainNav.nav-default .material-icons {
     color: #444;
+    padding: 0.5rem
   }
 
-  #mainNav.navbar-shrink .nav-link:hover {
+  #mainNav.navbar-shrink .nav-link:hover, #mainNav.nav-default .nav-link:hover {
     color: #ffffff;
     background-color: #48999F;
   }
 
-  #mainNav.navbar-shrink .nav-link:active {
+  #mainNav.navbar-shrink .nav-link:active, #mainNav.nav-default .nav-link:active {
     color: #ffffff;
     background-color: #48999F;
   }
+
 }
 
 .btn {
@@ -129,6 +196,10 @@ body {
   font-size: 80%;
   text-transform: uppercase;
   border: 0;
+}
+
+.carousel {
+  width: 100%;
 }
 
 .masthead {
@@ -270,19 +341,58 @@ body {
   background-size:cover;
   background-position: center;
   text-align: start;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 #anime-banner .text-right {
   width: 100%;
-  padding: 4rem 2rem 0rem 60%;
-  font-size: 4rem;
-  line-height: 4rem;
+  padding: 5vh 2vh 1vw 50vw;
+  font-size: 4vw;
+  line-height: 3.5vw;
   font-weight: 600;
   color:rgb(53, 53, 53);
 }
 
 #anime-banner .btn {
-  margin: 0rem 2rem 0rem 60%;
+  width: fit-content;
+  margin: 0vw 2vw 1vw 50vw;
+  padding: 1vw 2vw;
+}
+
+@media (max-width: 992px) {
+  #anime-banner .text-right {
+    font-size: 5vw;
+    line-height: 4vw;
+  }
+  
+}
+
+@media (max-width: 640px) {
+  #anime-banner {
+    background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0)30%, rgb(143,232,221) 90%), url("../collections/banner.jpg");
+    background-position: 20%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  #anime-banner .text-right {
+    width: 100%;
+    text-align: center;
+    padding: 40vw 2vw 0vw 2vw;
+    font-size: 2rem;
+    line-height: 1.6rem;
+    font-weight: 600;
+    color:rgb(53, 53, 53);
+  }
+
+  #anime-banner .btn {
+    width: fit-content;
+    margin: 2vw 2vw 0vw 2vw;
+    padding: 1vw 2vw;
+  }
 }
 
 #arrow-right {
@@ -303,11 +413,6 @@ body {
   transform: scale(1.1);
 }
 
-.product-card .brand-name {
-  padding: 0;
-  margin: 0
-}
-
 .product-card .product-name {
   height: 3.3rem;
 }
@@ -322,13 +427,48 @@ body {
   color: #444444;
 }
 
-.product-card .buy-now {
+.product-card .view-details {
   width: 100%;
 }
 
-.footer {
-  padding: 5rem 0;
+
+#productDetails .brand-label {
+  padding: 0;
+  margin: 0;
+  color:#444;
 }
+
+#productDetails .brand-name {
+  width: fit-content;
+  padding: 0rem 1rem;
+  color: #fff;
+  background-color: #48999F ;
+  margin-top: 0.5rem;
+}
+
+
+#productDetails .type-label {
+  padding: 0;
+  margin: 0;
+  color:#444;
+}
+
+#productDetails .type-name {
+  width: fit-content;
+  padding: 0rem 1rem;
+  color: #fff;
+  background-color: #48999F ;
+  margin-top: 0.5rem;
+}
+
+#productDetails .product-price {
+  color: #444444;
+}
+
+#productDetails .buy-now {
+  width: 100%;
+}
+
 
 #products .container-fluid .product-box, #products .container-sm .product-box, #products .container-md .product-box, #products .container-lg .product-box, #products .container-xl .product-box, #products .container-xxl .product-box {
   position: relative;
@@ -358,4 +498,9 @@ body {
   opacity: 1;
 }
 
+.footer {
+  margin-top: 10rem; 
+  padding: 5rem 0;
+  background-color:#444444;
+}
   
