--- a/css/styles.css
+++ b/css/styles.css
@@ -249,7 +249,7 @@ hr.style1{
 }
 
 /*Styles for header banner*/
-.masthead {
+.header-banner {
   position: relative;
   width: 100%;
   height: auto;
@@ -263,7 +263,7 @@ hr.style1{
 }
 
 /*Styles for header title - HIBIKE*/
-.masthead h1, .masthead .h1 {
+.header-banner h1, .header-banner .h1 {
   color: #fff;
   font-size: 2.5rem;
   line-height: 2.5rem;
@@ -271,34 +271,34 @@ hr.style1{
 }
 
 /*Styles for header subtitle - The way you sound it*/
-.masthead h2, .masthead .h2 {
+.header-banner h2, .header-banner .h2 {
   color: #fff;
   max-width: 20rem;
   font-size: 1rem;
 }
 
-.masthead .text-center {
+.header-banner .text-center {
   padding-top: 15rem;
 }
 
 @media (min-width: 768px) {
-  .masthead h1, .masthead .h1 {
+  .header-banner h1, .header-banner .h1 {
     font-size: 4rem;
     line-height: 4rem;
   }
 }
 
 @media (min-width: 992px) {
-  .masthead {
+  .header-banner {
     height: 100vh;
     padding: 0;
   }
-  .masthead h1, .masthead .h1 {
+  .header-banner h1, .header-banner .h1 {
     font-size: 6.5rem;
     line-height: 6.5rem;
     letter-spacing: 0.8rem;
   }
-  .masthead h2, .masthead .h2 {
+  .header-banner h2, .header-banner .h2 {
     max-width: 30rem;
     font-size: 1.2rem;
   }
